# vpdev

./: .gitignore  .virtual-platform  .vp-project  LICENSE  Makefile  README.md  vpdev.cabal
snaplets/heist/templates/: base.tpl  index.tpl  virtualplatform.tpl  vpFeature.tpl  vpProject.tpl
src/: .vp-files  Application.hs  Site.hs
