Name:                vpdev
Version:             0.3.6
Synopsis:            Virtual Platform Development Tool
Description:         The tool vpdev is intended to assist with the typical activities performed during feature-oriented development and with a virtual platform. vpdev is a background process (a web server) that you run locally on a development machine, one instance per project.
License:             MIT
Author:              Michał Antkiewicz
Maintainer:          mantkiew@gsd.uwaterloo.ca
Stability:           Experimental
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.16

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: True

Executable vpdev
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4      && < 5,
    clafer                    == 0.3.5.1,
    containers                >= 0.5.0.0,
    lens                      >= 3.7.6    && < 4.1,
    bytestring                >= 0.9.1   && < 0.11,
    executable-path           >= 0.0.3,
    heist                     >= 0.13    && < 0.14,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.2,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1


  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
