Name:                vpdev
Version:             0.3.7
Synopsis:            Virtual Platform Development Tool
Description:         The tool vpdev is intended to assist with the typical activities performed during feature-oriented development and with a virtual platform. vpdev is a background process (a web server) that you run locally on a development machine, one instance per project.
License:             MIT
Author:              Michał Antkiewicz
Maintainer:          Michał Antkiewicz <mantkiew@gsd.uwaterloo.ca>
Stability:           Experimental
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.18

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: True

Executable vpdev
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                        < 5
    , clafer                    == 0.3.7
    , containers                
    , lens                      < 4.4
    , bytestring                
    , executable-path           
    , heist                    
    , MonadCatchIO-transformers 
    , mtl                       
    , snap                      
    , snap-core                 
    , snap-server               
    , snap-loader-static        
    , text                      
    , time                      
    , xmlhtml                   


  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
